syntax = "proto3";

// extensions:
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.sizer_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.marshaler_all) = true;

package consensuspb;

message Signature {
    string creator = 1;
    // expected to be a bitmap
    bytes signers = 2;
    bytes signature = 3;
    enum Type {
        BLSGroupSig = 0;
        ed25119 = 1;
        secp256k1 = 2;
    }
    Type type = 4;
}

message Transaction {
    enum TransactionType {
        ADD_DATA = 0;
        UPDATE_OWNERSHIP = 1;
    }
    TransactionType type = 1;
    bytes payload = 2;
}

message AddDataTransaction {
    bytes bytes = 1;
}

message UpdateOwnershipTransaction {
    Did did = 1;
}

message Chain {
    bytes id = 1;
    repeated Block blocks = 2;
}

message Block {
    SignableBlock signable_block = 1;
    repeated Signature signatures = 2;
}

message SignableBlock {
    bytes previous_hash = 1;
    repeated Transaction transactions = 2;
}

message PublicKey {
    string id = 1;
    string type = 2;
    string owner = 3;
    string public_key_pem = 4;
    string public_key_base64 = 5;
    bytes public_key = 6;
}

message Authentication {
    enum Type {
        UPDATE = 0;
        PROVE = 1;
        CHANGE_OWNERSHIP = 2;
        ALL = 3;
    }
    Type type = 1;
    uint64 minimum = 2;
    repeated PublicKey public_key = 3;
}

message Did {
    bytes id = 1;
    // for future use
//    repeated PublicKey public_key = 2;
    repeated Authentication authentication = 3;
}
