syntax = "proto3";

// extensions:
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.sizer_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.marshaler_all) = true;

package mailserverpb;

message NestedEnvelope {
    bytes destination = 1;
    bytes envelope = 2;
}

message AckEnvelope {
    bytes destination = 1;
    bytes envelope_hash = 2;
}

message ChatMessage {
    bytes src = 1;
    bytes message = 2;
}

message ReplayRequest {
    bytes destination = 1;
}

message ReplayResponse {
    bytes envelope = 1;
}